<resources>
    <string name="app_name">Tinda</string>

    <string name="title_home">Home</string>
    <string name="title_basket">Basket</string>
    <string name="title_account">Account</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="button_category">Category</string>
    <string name="button_nearby">Nearby</string>
    <string name="button_deal">Deal</string>
    <string name="button_map">Map</string>
    <string name="button_favorite">Favorite</string>
    <string name="button_store">Store</string>
    <string name="button_history">History</string>

    <string name="tab_basket">BASKET</string>
    <string name="tab_favorites">FAVORITES</string>

    <string name="label_items">Item/s:</string>
    <string name="label_item_count">0</string>
    <string name="label_subtotal">Subtotal:</string>
    <string name="label_subtotal_amount">₱0.00</string>

    <string name="label_search">Search local products</string>
    <string name="label_nearby_store">Local Store Near You</string>
    <string name="label_available_products">Available Products</string>
    <string name="label_store_results">Stores</string>
    <string name="label_product_results">Products</string>
    <string name="label_store_name">Expression - San Pablo</string>
    <string name="label_username">Jhondale Arandia</string>
    <string name="label_account_type">Seller Account</string>
    <string name="label_activity">Activity</string>
    <string name="label_under_development">Under Development</string>

    <string name="label_product_name">KARSON Scientific Calculator Multiple Modes Intuitive Interface</string>
    <string name="label_product_store">Expressions - Ultimart San Pablo</string>
    <string name="label_product_price">₱169.00</string>
    <string name="label_store_category">School/Office Supplies</string>
    <string name="label_store_address">San Pablo</string>
    <string name="label_search_category">Electronics</string>
    <string name="label_product_count">1</string>
    <string name="label_deal_title">KARSON Scientific Calculator</string>
    <string name="label_deal_description">For Sale! Original item. Bought last january but not being used.</string>
    <string name="label_reserve_button">RESERVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>