<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".ui.basket.BasketFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabL_basketSection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/Theme.Tinda.TabLayoutCart">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_basket" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_favorites" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerV_basketItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="115dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabL_basketSection" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textV_itemCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_items"
                app:layout_constraintBottom_toTopOf="@+id/textV_subTotalLabel"
                app:layout_constraintEnd_toEndOf="@+id/textV_subTotalLabel" />

            <TextView
                android:id="@+id/textV_itemCount"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="@dimen/view_margin_half"
                android:text="@string/label_item_count"
                android:textColor="@color/teal"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textV_subTotalLabel"
                app:layout_constraintStart_toEndOf="@+id/textV_itemCountLabel" />

            <TextView
                android:id="@+id/textV_subTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_subtotal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textV_subTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="@dimen/view_margin_half"
                android:layout_marginBottom="8dp"
                android:text="@string/label_subtotal_amount"
                android:textColor="@color/teal"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textV_subTotalLabel" />

            <Button
                android:id="@+id/btn_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_half"
                android:layout_marginEnd="@dimen/view_margin"
                android:layout_marginBottom="@dimen/view_margin_half"
                android:text="@string/label_reserve_button"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>