<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".ui.account.AccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardV_activityTitle"
        Of="@+id/recyclerV_storeResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/view_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardV_accountButtons">

        <TextView
            android:id="@+id/textV_activityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:fontFamily="@font/inter_bold_family"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:text="@string/label_activity"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerV_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_half"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="@dimen/view_margin_half"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardV_activityTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardV_accountButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/view_margin"
        app:cardCornerRadius="@dimen/view_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintL_ProfileBanner">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="@dimen/view_margin"
            android:paddingBottom="@dimen/view_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_myStore"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/button_favorite"
                    android:padding="5dp"
                    app:cornerRadius="@dimen/view_corner_radius"
                    app:icon="@drawable/ic_store"
                    app:iconSize="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_store"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/btn_myStore" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_myDeal"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/button_map"
                    android:padding="5dp"
                    app:cornerRadius="@dimen/view_corner_radius"
                    app:icon="@drawable/ic_deal"
                    app:iconSize="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_deal"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/btn_myDeal" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_myHistory"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/button_deal"
                    android:padding="5dp"
                    app:cornerRadius="@dimen/view_corner_radius"
                    app:icon="@drawable/ic_history"
                    app:iconSize="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_history"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/btn_myHistory" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_myAccount"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/button_nearby"
                    android:padding="5dp"
                    app:cornerRadius="@dimen/view_corner_radius"
                    app:icon="@drawable/ic_account"
                    app:iconSize="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_account"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/btn_myAccount" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintL_ProfileBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textV_userFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/label_username"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/cardV_profilePicture"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textV_accountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_account_type"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/cardV_profilePicture"
            app:layout_constraintTop_toBottomOf="@+id/textV_userFullname" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardV_profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageV_profilePicture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_promotion_banner_5" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>